# search

./: .gitignore  Cargo.toml  META.json  Makefile  README.md  hsearch.control
.github/workflows/: packages.yml  tests.yml
docker/: Dockerfile.dev
packaging/: build-apt-repo.sh  build-deb.sh  index.html  install.sh
scripts/: test-perf.sh  test-replication.sh
sql/: hsearch--0.2.0--0.2.1.sql  hsearch--0.2.1--0.3.0.sql
src/: am.rs  blockstore.rs  lib.rs  options.rs  scoreboard.rs  store.rs  tokenizer.rs
